@@ -5,6 +5,8 @@ Revision history for Log-Abstraction
 	Only load Log::Log4perl when needed
 	Deep-clone the messages array during cloning
 	Map notice to info for Log::Log4perl
+	Syslog facility is now configurable (default is still local0)
+	Connections to the syslog are now persistent
 
 0.23	Thu Jul 17 14:45:54 EDT 2025
 	Better error message when we don't know what to do
